Forge功能神奇的又可以使用了,但一些版本启动会崩溃,测试修复ing